refactor: clean up service logic